--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,29 @@
+body {
+  padding: 5%;
+  background-color: #eff3f7;
+}
+
 .title {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 19px;
+}
+
+.main_content {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(400px, 1fr));
+  grid-template-rows: repeat(2, 400px);
+  grid-gap: 100px;
+  padding: 50px;
+
+  padding-top: 70px;
+}
+
+@media screen and (max-width: 1400px) {
+  body {
+  }
+  .main_content {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
 }
